--- a/report.conf
+++ b/report.conf
@@ -1,16 +1,16 @@
-upstream dockerJenkins { 
-         server 172.17.0.1:8080;
+upstream dockerREPort { 
+         server 172.17.0.1:2001;
 }
 server {
     listen       80;
-    server_name  jenkins.davwhite.com;
+    server_name  report.davwhite.com;
 
-    location / {
+    location /REPort {
        proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header Host $http_host;
                 proxy_set_header X-NginX-Proxy true;
-                proxy_pass http://dockerJenkins; 
+                proxy_pass http://dockerREPort; 
     }
 }
 
